  . Fixed bug #70481 (Memory leak in auto_global_copy_ctor() in ZTS build).
    (Laruence)

- DOM:
  . Fixed bug #70558 ("Couldn't fetch" error in 
    DOMDocument::registerNodeClass()). (Laruence) 

- FPM:
  . Fixed bug #70538 ("php-fpm -i" crashes). (rainer dot jung at
    kippdata dot de)
  . Fixed bug #70279 (HTTP Authorization Header is sometimes passed to newer
    reqeusts). (Laruence)

- OpenSSL
  . Require at least OpenSSL version 0.9.8. (Jakub Zelenka)
  . Fixed bug #68312 (Lookup for openssl.cnf causes a message box). (Anatol)

- Phpdbg:
  . Fixed bug #70532 (phpdbg must respect set_exception_handler). (Bob)
  . Fixed bug #70531 (Run and quit mode (-qrr) should not fallback to
    interactive mode). (Bob)

- Session:
  . Fixed bug #70529 (Session read causes "String is not zero-terminated" error).
    (Yasuo)

- XMLRPC
  . Fixed bug #70526 (xmlrpc_set_type returns false on success). (Laruence)

- XSL:
  . Fixed bug #70535 (XSLT: free(): invalid pointer). (Laruence)

17 Sep 2015, PHP 7.0.0 RC 3

- Core:
  . Fixed bug #70431 (Memory leak in php_ini.c). (Senthil, Laruence)
  . Fixed bug #70478 (**= does no longer work). (Bob)

- CLI server:
  . Fixed bug #68291 (404 on urls with '+'). (cmb)

- DOM:
  . Fixed bug #70001 (Assigning to DOMNode::textContent does additional entity
    encoding). (cmb)

- Intl:
  . Fixed bug #70453 (IntlChar::foldCase() incorrect arguments and missing
    constants). (cmb)
  . Fixed bug #70454 (IntlChar::forDigit second parameter should be optional).
    (cmb, colinodell)

- Mysqlnd:
  . Fixed bug #70384 (mysqli_real_query():Unknown type 245 sent by the server).
   (Andrey)
  . Fixed bug #70456 (mysqlnd doesn't activate TCP keep-alive when connecting to
    a server). (Sergei Turchanov)

- Opcache:
  . Fixed bug #70423 (Warning Internal error: wrong size calculation). (Anatol)

- OpenSSL
  . Fixed bug #55259 (openssl extension does not get the DH parameters from
    DH key resource). (Jakub Zelenka)